--- a/package.json
+++ b/package.json
@@ -18,19 +18,21 @@
     "@clerk/clerk-expo": "^2.7.0",
     "@clerk/types": "^4.44.1",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "^52.0.28",
+    "expo": "^52.0.29",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "^7.0.5",
+    "expo-location": "^18.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
+    "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
@@ -38,6 +40,9 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^1.18.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
