--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.18.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
